example/ex6-type-annotations/example6.js
let count = 1; //ok

count = 'name'; //error 

console.log(">>> check count: ", count)

let names = ["Duyen", "Tran", "Typescript"]; // array consists of strings only
names.push(25); //["Duyen", "Tran", "Typescript", 25]
console.log(">>> check names: ", names);
